--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,3 +19,16 @@ spec:
           image: thokil/moonapp:latest
           ports:
             - containerPort: 8082
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8082
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8082
+            initialDelaySeconds: 10
+            periodSeconds: 30
+
